--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,14 @@
 repos:
 - hooks:
+  - id: check-changelog
+    args: [--version-regex, '<a href="[^"]+">(?P<version>[^<]+)', --bump-latest]
+  repo: https://gitlab.com/ydethe/pdm-copier.git
+  rev: v0.4.0
+
+- hooks:
   - id: check-case-conflict
   - id: check-merge-conflict
-  - id: check-symlinks
   - id: check-yaml
-  - id: debug-statements
-  - id: end-of-file-fixer
   - id: mixed-line-ending
   - id: trailing-whitespace
   repo: https://github.com/pre-commit/pre-commit-hooks
@@ -41,8 +44,4 @@ repos:
     id: ruff
   repo: https://github.com/charliermarsh/ruff-pre-commit
   rev: v0.0.263
-
-- hooks:
-  - id: check-changelog
-  repo: https://gitlab.com/ydethe/pdm-copier.git
-  rev: v0.2.2
+  
