--- a/project/.pre-commit-config.yaml
+++ b/project/.pre-commit-config.yaml
@@ -1,5 +1,11 @@
 repos:
-  - repo: local
+- hooks:
+  - id: check-changelog
+    args: [--version-regex, '<a href="[^"]+">(?P<version>[^<]+)', --bump-latest]
+  repo: https://gitlab.com/ydethe/pdm-copier.git
+  rev: v0.4.0
+
+- repo: local
     hooks:
       # Prevent committing .rej files
       - id: forbidden-files
@@ -15,10 +21,7 @@ repos:
       #- id: check-added-large-files
       - id: check-case-conflict
       - id: check-merge-conflict
-      - id: check-symlinks
       - id: check-yaml
-      - id: debug-statements
-      - id: end-of-file-fixer
       - id: mixed-line-ending
       - id: trailing-whitespace
 
@@ -45,10 +48,4 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.902
-    hooks:
-      - id: mypy
-        exclude: ^tests/
-        args: [--strict]
+        
