--- a/project/.pre-commit-config.yaml
+++ b/project/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
     hooks:
       - id: black
         additional_dependencies: ["click==8.0.4"]
-        args: ["-l", "100", "--force-exclude", "kt_.*.py"]
+        args: [--config, "pyproject.toml"]
 
   - repo: https://github.com/adamchainz/blacken-docs
     rev: v1.12.1
@@ -44,7 +44,7 @@ repos:
     rev: v0.0.261
     hooks:
       - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
+        args: [--fix, --exit-non-zero-on-fix, --config, "pyproject.toml"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.902
